--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,12 +6,11 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" height="24" width="36" />
   </div>
   <div class="contents">
-    <h3> Project Title </h3>
-    <ul>
-      <li> Featured Skills</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <h3> Deeply Supervised Salient Object Detection with Short Connections  </h3>
+    <p>  Qibin Hou, Ming-Ming Cheng, Xiaowei Hu, Ali Borji, Zhuowen Tu, Philip Torr </p>
+    <p>  IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2017  </p>
+    <p>  IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2019  </p>
+    <a class="project-link" href="#">PDF</a>
   </div>
 </div>
 <div class="user-projects">
