--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,7 +2,7 @@
   <h1> Featured Projects </h1>
 </div>
 <div class="user-projects">
-  <div class="images-right">
+  <div class="images-left">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" height="100" />
   </div>
   <div class="contents">
