--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,7 +5,7 @@
   <div class="images-left">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" height="100" />
   </div>
-  <div class="contents">
+  <div class="contents-right">
     <h3> Deeply Supervised Salient Object Detection with Short Connections  </h3>
     <p>  Qibin Hou, Ming-Ming Cheng, Xiaowei Hu, Ali Borji, Zhuowen Tu, Philip Torr </p>
     <p>  IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2017  </p>
