--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,10 +2,10 @@
   <h1> Featured Projects </h1>
 </div>
 <div class="user-projects">
-  <div class="images">
+  <div class="images-left">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" height="60" />
   </div>
-  <div class="first">
+  <div class="wrap-content">
     <h3> Deeply Supervised Salient Object Detection with Short Connections  </h3>
     <p>  Qibin Hou, Ming-Ming Cheng, Xiaowei Hu, Ali Borji, Zhuowen Tu, Philip Torr </p>
     <p>  IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2017  </p>
